--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/leap-year-check-angular",
-            "baseHref": "https://github.com/AkshayV30/leap-year-check-angular/",
+            "baseHref": "/leap-year-check-angular/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
