GitHub Pages Deployment v3

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,19 +19,26 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install dependencies
         run: npm install
 
       - name: Build Angular app
-        run: npm run build -- --configuration production --base-href="/leap-year-check-angular/"
+        run: npm run build -- --configuration production --base-href="/$(basename $GITHUB_REPOSITORY)/"
 
       - name: Create .nojekyll file
-        run: touch dist/leap-year-check-angular/.nojekyll
+        run: touch dist/$(basename $GITHUB_REPOSITORY)/browser/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: dist/leap-year-check-angular
+          folder: dist/$(basename $GITHUB_REPOSITORY)/browser/
+          clean: true
+          commit-message: "🚀 Deploy Angular app to GitHub Pages"
+
+      - name: Output Deployment URL
+        run: |
+          REPO_NAME=$(basename $GITHUB_REPOSITORY)
+          echo "✅ Successfully deployed! Access your site at: https://${{ github.repository_owner }}.github.io/$REPO_NAME/"
