--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,10 @@
 name: Deploy Angular to GitHub Pages
 
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - master
 
 permissions:
   contents: write
@@ -39,4 +40,4 @@ jobs:
 
       - name: Output Deployment URL
         run: |
-          echo "✅ Successfully deployed! Access your site at: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
+          echo "Access site at: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
