--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,14 +26,14 @@ jobs:
         run: npm install
 
       - name: Build Angular app
-        run: npm run build -- --configuration production --base-href="/${{ github.event.repository.name }}/"
+        run: npm run build --configuration production 
 
       - name: Create .nojekyll file
-        run: touch dist/browser/${{ github.event.repository.name }}/.nojekyll
+        run: touch dist/${{ github.event.repository.name }}/browser/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: dist/browser/${{ github.event.repository.name }}/
+          folder: dist/${{ github.event.repository.name }}/browser/
           clean: true
