--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
         run: npm install
 
       - name: Build Angular app
-        run: npm run build --configuration production 
+        run: npm run build 
 
       - name: Create .nojekyll file
         run: touch dist/${{ github.event.repository.name }}/browser/.nojekyll
